[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/grow_full_iteration.gd" type="Script" id=1]
[ext_resource path="res://source/gui/stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/gui/stats.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
iterations = 16
start = Vector2( 500, 580 )
branch_length = 4.0

[node name="Grid" parent="." instance=ExtResource( 2 )]
script = ExtResource( 3 )

[connection signal="update_iteration" from="." to="Grid" method="_on_update_iteration"]
[connection signal="update_lines_drawn" from="." to="Grid" method="_on_update_lines_drawn"]
[connection signal="update_word_length" from="." to="Grid" method="_on_update_word_length"]
